[package]
name = "pwrzv"
version = "0.3.1"
edition = "2024"
description = "A Rolls-Royce–inspired performance reserve meter for Linux systems"
license = "MIT"
repository = "https://github.com/kookyleo/pwrzv"
keywords = ["system", "monitoring", "linux", "performance"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pwrzv"
path = "src/main.rs"

[lib]
name = "pwrzv"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
